# bullshitmeter

./: .gitignore  README.md  bs_service.py  main.py  pydantic_thought_parser.py  pyproject.toml  test_bs_service.py
